--- a/style.css
+++ b/style.css
@@ -12,9 +12,12 @@ h1	{
 	letter-spacing: 1px;
 }
 h2	{
-	font-size:20px;
-	word-spacing: 2px;
-	letter-spacing: 2px;
+	font-size:18px;
+	font-weight: 450;
+	letter-spacing: 0.5px;
+	background-color: #acd1e9;
+	padding: 4%;
+	border-radius:10px;
 }
 p 	{
 	line-height: 0.25;
@@ -22,13 +25,32 @@ p 	{
 a	{
 	color: #000000;
 }
+span	{
+	display: inline;
+}
+select	{
+	border: none;
+	border-radius: 4px;
+	background-color: #f1f1f1;
+}
+button	{
+	border: none;
+	border-radius: 4px;
+	background-color: #f1f1f1;
+	margin-left: 3px;
+}
+.format {
+	padding-left: 23%;
+}
 #line	{
+	display: inline;
+}
+#lineblock	{
 	display: inline-block;
 }
 #content	{
 	background-color:#6d929b;
 	padding: 5px 15px 8px 15px;
-	border-style: none;
 	border-radius:10px;
 	
 }
