--- a/style.css
+++ b/style.css
@@ -16,8 +16,8 @@ h2	{
 	font-weight: 450;
 	letter-spacing: 0.5px;
 	background-color: #f8f8f8;
-	padding: 4%;
 	border-radius:10px;
+	padding:12px;
 }
 p 	{
 	line-height: 0.25;
@@ -32,16 +32,19 @@ select	{
 	border: none;
 	border-radius: 4px;
 	background-color: #f8f8f8;
-	padding: 3%; 
-	padding-left: 6%;
-	padding-right: 6%;
+	width: 175px;
+	height:30px;
+	font-size: 16px;
 }
 button	{
 	border: none;
 	border-radius: 4px;
 	background-color: #f8f8f8;
-	padding: 10%; 
-	margin-left: 10px;
+	width: 75px;
+	height:30px;
+	margin-left: 25px;
+	font-size: 16px;
+	letter-spacing: 0.5px;
 }
 #line	{
 	display: inline;
