--- a/indexStyle.css
+++ b/indexStyle.css
@@ -1,26 +1,17 @@
 body	{
-	background-color:#f8f8f8;
-	text-align:left;
+	background-color:#ffffff;
 	color: #505050;
-	line-height: .5;
-	padding: 8px;
-	white-space: nowrap;
-}
-h1	{
-	font-size:35px;
-	word-spacing: 2px;
-	letter-spacing: 1px;
-}
-h2	{
-	font-size:18px;
-	font-weight: 450;
-	letter-spacing: 0.5px;
-	background-color: #f8f8f8;
-	border-radius:8px;
-	padding:12px;
 }
 p 	{
 	line-height: 0.25;
+}
+h1  {
+  font-size: 18px;
+  
+}
+h2  {
+  font-size: 12px;
+  
 }
 a	{
 	color: #000000;
@@ -28,23 +19,10 @@ a	{
 span	{
 	display: inline;
 }
-select	{
-	border: none;
-	border-radius: 8px;
-	background-color: #f8f8f8;
-	width: 175px;
-	height:30px;
-	font-size: 16px;
-}
-button	{
-	border: none;
-	border-radius:8px;
-	background-color: #f8f8f8;
-	width: 75px;
-	height:30px;
-	margin-left: 34px;
-	font-size: 16px;
-	letter-spacing: 0.5px;
+#header {
+  background-color: #bebebe;
+  padding: 5px 15px 8px 15px;
+  font-size: 30px;
 }
 #line	{
 	display: inline;
@@ -59,7 +37,9 @@ button	{
 	
 }
 #footer	{ 
+  background-color: #bebebe;
 	font-size:10px;
+  padding: 5px 15px 8px 15px;
 	word-spacing: 0.5px;
 	letter-spacing: 1px;
 	text-align: center;
