--- a/extentionStyle.css
+++ b/extentionStyle.css
@@ -48,6 +48,10 @@ button	{
 	font-size: 16px;
 	letter-spacing: 0.5px;
 }
+textarea {
+    width: 250px;
+	height:50px;
+}
 #line	{
 	display: inline;
 }
