--- a/extentionStyle.css
+++ b/extentionStyle.css
@@ -37,6 +37,7 @@ select	{
 	width: 175px;
 	height:30px;
 	font-size: 16px;
+	outline-color: #2a7189;
 }
 button	{
 	border: none;
@@ -47,10 +48,13 @@ button	{
 	margin-left: 5px;
 	font-size: 16px;
 	letter-spacing: 0.5px;
+	outline-color: #2a7189;
 }
 textarea {
     width: 250px;
-	height:50px;
+	height: 80px;
+	outline: none;
+	resize: none;
 }
 #line	{
 	display: inline;
