--- a/extentionStyle.css
+++ b/extentionStyle.css
@@ -27,7 +27,12 @@ h3	{
 	letter-spacing: 0.5px;
 	background-color: #f8f8f8;
 	border-radius:8px;
-	padding:8px;
+	padding:8px 16px 8px 64px;
+	text-align: left;
+	margin-left: 20px;
+	margin-right: 20px;
+	margin-bottom: -7px;
+	margin-top: -10px;
 }
 p 	{
 	line-height: 0.25;
