--- a/extentionStyle.css
+++ b/extentionStyle.css
@@ -12,10 +12,10 @@ h1	{
 	font-size:35px;
 	word-spacing: 2px;
 	letter-spacing: 1px;
-	margin-bottom:35px;
 }
 h2	{
 	margin-top: 10px;
+	margin-bottom: 25px;
 	font-size:18px;
 	font-weight: 450;
 	letter-spacing: 0.5px;
@@ -53,6 +53,7 @@ select	{
 	height:30px;
 	font-size: 16px;
 	outline-color: #2a7189;
+	margin-top:25px;
 }
 button	{
 	border: none;
