--- a/extentionStyle.css
+++ b/extentionStyle.css
@@ -1,35 +1,35 @@
 body	{
-	background-color:#f8f8f8;
-	text-align:left;
+	background-color: #f8f8f8;
+	text-align: left;
 	color: #505050;
-	line-height: .5;
+	line-height: 0.5;
 	padding: 8px;
 	white-space: nowrap;
 	width: 375px;
 	height: 190px;
 }
 h1	{
-	font-size:35px;
+	font-size: 35px;
 	word-spacing: 2px;
 	letter-spacing: 1px;
 }
 h2	{
 	margin-top: 10px;
 	margin-bottom: 25px;
-	font-size:18px;
+	font-size: 18px;
 	font-weight: 450;
 	letter-spacing: 0.5px;
 	background-color: #f8f8f8;
-	border-radius:8px;
-	padding:18px 12px 18px 12px;
+	border-radius: 8px;
+	padding: 18px 12px 18px 12px;
 }
 h3	{
-	font-size:14px;
+	font-size: 14px;
 	font-weight: 450;
 	letter-spacing: 0.5px;
 	background-color: #f8f8f8;
-	border-radius:8px;
-	padding:8px 16px 8px 64px;
+	border-radius: 8px;
+	padding: 8px 16px 8px 64px;
 	text-align: left;
 	margin-left: 20px;
 	margin-right: 20px;
@@ -50,17 +50,17 @@ select	{
 	border-radius: 8px;
 	background-color: #f8f8f8;
 	width: 175px;
-	height:30px;
+	height: 30px;
 	font-size: 16px;
 	outline-color: #2a7189;
-	margin-top:25px;
+	margin-top: 25px;
 }
 button	{
 	border: none;
-	border-radius:8px;
+	border-radius: 8px;
 	background-color: #f8f8f8;
 	width: 75px;
-	height:30px;
+	height: 30px;
 	margin-left: 5px;
 	font-size: 16px;
 	letter-spacing: 0.5px;
@@ -80,14 +80,14 @@ textarea {
 	display: inline-block;
 }
 #content	{
-	background-color:#add8e6;
+	background-color: #add8e6;
 	padding: 5px 15px 8px 15px;
-	border-radius:10px;
+	border-radius: 10px;
 	
 }
 #footer	{ 
 	margin-top: 8px;
-	font-size:10px;
+	font-size: 10px;
 	word-spacing: 0.5px;
 	letter-spacing: 1px;
 	text-align: center;
