--- a/indexStyle.css
+++ b/indexStyle.css
@@ -1,49 +1,49 @@
 body	{
-	background-color:#ffffff;
-	color: #505050;
+	background-color: #ffffff;
+	color:            #505050;
+}
+header {
+  padding:          5px 15px 8px 15px;
+  background-color: #bebebe;
+  font-size:        30px;
 }
 p 	{
-	line-height: 0.25;
+	line-height:      0.25;
 }
 h1  {
-  font-size: 18px;
+  font-size:        18px;
   
 }
 h2  {
-  font-size: 14px;
+  font-size:        14px;
 
 }
 h3  {
-  font-size: 12px;
+  font-size:        12px;
 }
 a	{
-	color: #000000;
+	color:            #000000;
+  font-size:        1.5em;
 }
 span	{
-	display: inline;
+	display:          inline;
 }
-#header {
+footer	{ 
+  padding:          5px 15px 8px 15px;
   background-color: #bebebe;
-  padding: 5px 15px 8px 15px;
-  font-size: 30px;
+	font-size:        10px;
+  text-align:       center;
+	word-spacing:     0.5px;
+	letter-spacing:   1px;
 }
 #line	{
-	display: inline;
+	display:          inline;
 }
 #lineblock	{
-	display: inline-block;
+	display:          inline-block;
 }
 #content	{
-	background-color:#add8e6;
-	padding: 5px 15px 8px 15px;
-	border-radius:10px;
-	
-}
-#footer	{ 
-  background-color: #bebebe;
-	font-size:10px;
-  padding: 5px 15px 8px 15px;
-	word-spacing: 0.5px;
-	letter-spacing: 1px;
-	text-align: center;
+  border-radius:    10px;
+  padding:          5px 15px 8px 15px;
+	background-color: #add8e6;
 }
