--- a/extentionStyle.css
+++ b/extentionStyle.css
@@ -22,6 +22,16 @@ h2	{
   font-weight:      450;
   letter-spacing:   0.5px;
 }
+h3	{
+  width:            175px;
+  height:           30px;
+  margin-top:       0px;
+  border-radius:    8px;
+  padding:          5px 0px 0px 0px;
+  background-color: #f8f8f8;
+  font-size:        16px;
+  display:          inline;
+}
 p 	{
   line-height:      0.25;
 }
