--- a/extentionStyle.css
+++ b/extentionStyle.css
@@ -2,7 +2,7 @@ body	{
   width:            375px;
   height:           200px;
   padding:          8px;
-  background-color: #f8f8f8;
+  background-color: #ffffff;
   color:            #505050;
   text-align:       left;
   line-height:      0.5;
@@ -25,7 +25,7 @@ h2	{
   margin-top:       25px;
   border-radius:    8px;
   padding:          18px 12px 18px 12px;
-  background-color: #f8f8f8;
+  background-color: #ffffff;
   font-size:        18px;
   font-weight:      450;
   letter-spacing:   0.5px;
@@ -36,7 +36,7 @@ h3	{
   margin-top:       0px;
   border-radius:    8px;
   padding:          5px 0px 0px 0px;
-  background-color: #f8f8f8;
+  background-color: #ffffff;
   font-size:        16px;
   display:          inline;
 }
@@ -55,7 +55,7 @@ select	{
   margin-top:       0px;
   border:           none;
   border-radius:    8px;
-  background-color: #f8f8f8;
+  background-color: #ffffff;
   outline-color:    #2a7189;
   font-size:        16px;
 }
@@ -66,7 +66,7 @@ button	{
   margin-top:       0px;
   border:           none;
   border-radius:    8px;
-  background-color: #f8f8f8;
+  background-color: #ffffff;
   outline-color:    #2a7189;
   font-size:        16px;
   letter-spacing:   0.5px;
